--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </li>
                     </ul>
                     <div class="wrapper-act home-type">
-                        <button type="button" class="btn-type2 link">See all events</button>
+                        <button type="button" class="btn-type2 link">See all events1111111111111111111111111111111111111</button>
                     </div>
                 </div>
 <!--
