--- a/inde1111.html
+++ b/inde1111.html
@@ -21,7 +21,7 @@
             <div class="grid-row">
 
                 <div class="board-box-sple">
-                    <h2 class="sec-title">NEWS</h2>
+                    <h2 class="sec-title">NEWSasdasdasd</h2>
                     <ul>
                         <!-- news block -->
                         <li class="grid-col">
